--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-  "description": "Lexical Analyzer Runtime Library",
+  "description": "Lexical Analysis Runtime Library",
   "name": "remorhaz/lexer-runtime",
   "homepage": "https://github.com/remorhaz/php-lexer-runtime",
   "license": "MIT",
+  "type": "library",
   "authors": [
     {
       "name": "Edward Surov",
@@ -25,7 +26,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.1",
-    "infection/infection": "^0.16.2",
+    "infection/infection": "^0.16.3",
     "squizlabs/php_codesniffer": "^3.5",
     "vimeo/psalm": "^3.11"
   },
