Configured CI run on nightly PHP build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ matrix:
       env: XDEBUG=YES
     - php: '7.4'
       env: XDEBUG=YES
+    - php: nightly
+      env: XDEBUG=NO
+jobs:
+  allow_failures:
+    - php: nightly
 
 install:
   - mkdir -p ./build/logs
