--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-matrix:
+jobs:
   include:
     - php: '7.3'
       env: XDEBUG=YES
@@ -22,11 +22,23 @@ install:
 
 script:
   - vendor/bin/phpcs -sp --report-junit=build/logs/phpcs.xml
-  - if [ "$XDEBUG" == "YES" ]; then vendor/bin/phpunit --coverage-clover=build/logs/clover.xml --coverage-xml=build/logs/coverage-xml --log-junit=build/logs/junit.xml; else vendor/bin/phpunit; fi
+  - if [ "$XDEBUG" == "YES" ]; then
+      vendor/bin/phpunit --coverage-clover=build/logs/clover.xml --coverage-xml=build/logs/coverage-xml --log-junit=build/logs/junit.xml;
+    else
+      vendor/bin/phpunit;
+    fi
   - vendor/bin/psalm --threads=4
-  - if [ "$XDEBUG" == "YES" ]; then vendor/bin/infection --coverage=build/logs --threads=4  --no-progress --skip-initial-tests; fi
+  - if [ "$XDEBUG" == "YES" ]; then
+      vendor/bin/infection --coverage=build/logs --threads=4  --no-progress --skip-initial-tests;
+    fi
 
 after_success:
-  - if [ "$XDEBUG" == "YES" ]; then bash <(curl -s https://codecov.io/bash -s "build/logs"); fi
-  - if [ "$XDEBUG" == "YES" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-  - if [ "$XDEBUG" == "YES" ]; then php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml; fi
+  - if [ "$XDEBUG" == "YES" ]; then
+      bash <(curl -s https://codecov.io/bash -s "build/logs");
+    fi
+  - if [ "$XDEBUG" == "YES" ]; then
+      wget https://scrutinizer-ci.com/ocular.phar;
+    fi
+  - if [ "$XDEBUG" == "YES" ]; then
+      php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml;
+    fi
