--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,21 @@
 version: '3'
 
 services:
-  php:
+  php8.0:
+    build:
+      context: .
+      dockerfile: php-8.0.Dockerfile
+    volumes:
+      - .:/app
+    working_dir: /app
+  php7.3:
     build:
       context: .
       dockerfile: php-7.3.Dockerfile
     volumes:
       - .:/app
     working_dir: /app
-  php7.4:
+  php:
     build:
       context: .
       dockerfile: php-7.4.Dockerfile
