--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,14 @@
     }
   },
   "require": {
-    "php": "^7.3"
+    "php": "^7.3 || ^8",
+    "ext-intl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.1",
-    "infection/infection": "^0.16.3",
+    "phpunit/phpunit": "^9.2",
+    "infection/infection": "^0.16.4",
     "squizlabs/php_codesniffer": "^3.5",
-    "vimeo/psalm": "^3.11"
+    "vimeo/psalm": "^3.12"
   },
   "scripts": {
     "test-cs": "vendor/bin/phpcs -sp",
